# zara-bot

./: main.py  products.json  pyproject.toml  requirements.txt  urunler.json
