[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "nest-asyncio>=1.6.0",
    "requests>=2.32.4",
    "telegram>=0.0.1",
]
